--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -20,6 +20,10 @@ To learn more about service accounts in Kubernetes, visit the
 and [Kubernetes RBAC](https://kubernetes.io/docs/reference/access-authn-authz/rbac/)
 documentation.
 
+~> **Note:** We do not recommend using tokens created by the Kubernetes Secrets Engine to
+   authenticate with the [Vault Kuberenetes Auth Method](/docs/auth/kubernetes). This will
+   generate many unique identities in Vault that will be hard to manage.
+
 ## Setup
 
 The Kubernetes Secrets Engine must be configured in advance before it
