Update deprecation doc link
Co-authored-by: Loann Le <84412881+taoism4504@users.noreply.github.com>

--- a/website/content/docs/enterprise/license/faq.mdx
+++ b/website/content/docs/enterprise/license/faq.mdx
@@ -29,7 +29,7 @@ This FAQ section is for the license changes introduced in Vault Enterprise 1.11.
 
 ### Q: What is the product behavior change introduced by the licensing changes?
 
-Per the [feature deprecation plans](https://www.vaultproject.io/docs/deprecation), Vault will no longer support licenses in storage. An [auto-loaded license](https://www.vaultproject.io/docs/enterprise/license/autoloading) must be used instead. If you are using stored licenses, you must migrate to auto-loaded licenses prior to upgrading to Vault 1.11
+Per the [feature deprecation plans](/docs/deprecation), Vault will no longer support licenses in storage. An [auto-loaded license](/docs/enterprise/license/autoloading) must be used instead. If you are using stored licenses, you must migrate to auto-loaded licenses prior to upgrading to Vault 1.11
 
 ### Q: Will these license changes impact HCP Vault?
 
