Add note to make sure default is configured
Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/secrets/pki/considerations.mdx
+++ b/website/content/docs/secrets/pki/considerations.mdx
@@ -72,6 +72,16 @@ by the HSM and one backed by Vault -- can satisfy both use cases. Operators
 can make roles setting maximum TTLs for each issuer and consumers of the
 mount can decide which to use.
 
+### Always Configure a Default Issuer
+
+For backwards compatibility, [the default issuer](/api-docs/secret/pki#read-issuers-configuration)
+is used to service PKI endpoints without an explicit issuer (either via path
+selection or role-based selection). When certificates are revoked and their
+issuer is no longer part of this PKI mount, Vault places them on the default
+issuer's CRL. This means maintaining a default issuer is important for both
+backwards compatibility for issuing certificates and for ensuring revoked
+certificates land on a CRL.
+
 ## Use a CA Hierarchy
 
 It is generally recommended to use a hierarchical CA setup, with a root
