Add note about automating certificate renewal
As suggested by Ricardo Oliveira, thanks!

Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/secrets/pki/considerations.mdx
+++ b/website/content/docs/secrets/pki/considerations.mdx
@@ -204,6 +204,15 @@ comma-separated string parameter.
    field separately, or the CRLs should be consolidated and served outside of
    Vault.
 
+## Automate Leaf Certificate Renewal
+
+As much as possible, for managing certificates for services at scale, it is
+best to automate renewal of certificates. Vault agent [has support for
+automatically renewing requested certificates](/docs/agent/template#certificates)
+based on the `validTo` field. Other solutions might involve using
+[cert-manager](https://cert-manager.io/) in Kubernetes or OpenShift, backed
+by the Vault CA.
+
 ## Safe Minimums
 
 Since its inception, this secrets engine has enforced SHA256 for signature
