--- a/website/content/docs/concepts/seal.mdx
+++ b/website/content/docs/concepts/seal.mdx
@@ -126,8 +126,7 @@ keys for this purpose, rather than the barrier unseal keys, is automatic.
 ### Initialization
 
 When initializing, the split is performed according to the following CLI flags
-and their API equivalents in the
-[/sys/init](/api-docs/system/init) endpoint:
+and their API equivalents in the [/sys/init](/api-docs/system/init) endpoint:
 
 - `recovery-shares`: The number of shares into which to split the recovery
   key. This value is equivalent to the `recovery_shares` value in the API
@@ -141,7 +140,7 @@ and their API equivalents in the
   an array, not a string.
 
 Additionally, Vault will refuse to initialize if the option has not been set to
-generate a key but no key is found. See
+generate a key, and no key is found. See
 [Configuration](/docs/configuration/seal/pkcs11) for more details.
 
 ### Rekeying
