--- a/website/content/docs/enterprise/hsm/behavior.mdx
+++ b/website/content/docs/enterprise/hsm/behavior.mdx
@@ -20,9 +20,11 @@ functionality.
 
 When using an HSM, because the HSM automatically unseals the barrier but
 recovery operations should still have human oversight, Vault instead uses two
-sets of keys: unseal keys and recovery keys.
+sets of keys: unseal keys and recovery keys. 
 
-Refer to the [Seal/Unseal](/docs/concepts/seal#auto-unseal) documentation to learn more about recovery keys.
+-> **Recovery keys:** Refer to the
+ [Seal/Unseal](/docs/concepts/seal#recovery-key) documentation to learn more
+ about recovery keys.
 
 ## Unseal (Root) Key
 
